--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <script src="config.js"></script>
 <script>
     System.import('src/main')
-    .catch(console.error.bind(console));
+            .catch(console.error.bind(console));
 </script>
+Hello!!
 </html>
